Bug 1227312 - Avoid calling FinalizeChildData twice in GenerateCompleteMinidump. r=ted